<resources>
    <!-- Activity titles -->
    <string name="app_name">Wear Flashcards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_title">Edit title</string>
    <string name="title_activity_edit_card">Edit card</string>
    <string name="title_activity_create_set">Create a new set</string>
    <string name="title_activity_create_card">Create a new card</string>
    <string name="title_activity_create_folder">Create a new folder</string>
    <string name="title_activity_import_sets">Import sets</string>

    <!-- TextViews -->
    <plurals name="text_set_card_count">
        <item quantity="one">%1$d card</item>
        <item quantity="other">%1$d cards</item>
    </plurals>
    <plurals name="text_folder_set_count">
        <item quantity="one">%1$d set, %2$s</item>
        <item quantity="other">%1$d sets, %2$s</item>
    </plurals>

    <!-- Messages -->
    <string name="message_empty_database">Tap on the + button to create a flashcard set</string>
    <string name="message_no_folders">Tap on the + button to create a folder</string>
    <string name="message_empty_stack">Tap on the + button to create a flashcard</string>
    <string name="message_empty_folder">Tap on the red button to import a set</string>
    <string name="message_all_cards_hidden">All cards are hidden</string>
    <string name="message_import_empty">There are no sets left to import</string>
    <string name="message_csv_import_zero">No new cards found</string>
    <string name="message_csv_export_zero">No cards found</string>
    <plurals name="message_csv_import">
        <item quantity="one">Successfully imported %1$d new card</item>
        <item quantity="other">Successfully imported %1$d new cards</item>
    </plurals>
    <plurals name="message_csv_export">
        <item quantity="one">Successfully exported %1$d card%2$s</item>
        <item quantity="other">Successfully exported %1$d cards%2$s</item>
    </plurals>
    <string name="message_csv_reading">Importing new cards. Please wait&#8230;</string>
    <string name="message_csv_writing">Exporting cards. Please wait&#8230;</string>
    <string name="message_database_reading">Restoring flashcards. Please wait&#8230;</string>
    <string name="message_database_writing">Backing up flashcards. Please wait&#8230;</string>
    <string name="message_csv_unavailable">Storage is currently unavailable.</string>
    <string name="message_backup_successful">Successfully backed up all flashcards%1$s</string>
    <string name="message_restore_successful">Successfully restored all flashcards</string>
    <string name="message_io_failed">Failed to create file. Please try again later</string>
    <string name="message_jb_directory">&#160;to Download/WFlashcards/</string>

    <!-- EditText hints -->
    <string name="hint_set_title">Set title</string>
    <string name="hint_term">Term</string>
    <string name="hint_definition">Definition</string>
    <string name="hint_folder_title">Folder title</string>

    <!-- Buttons -->
    <string name="button_create">Create</string>
    <string name="button_next_card">Next card</string>
    <string name="button_done">Done</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_set_view">Study</string>
    <string name="button_list_cards">View cards as a list</string>
    <string name="button_starred_only">Only show starred cards</string>
    <string name="button_starred_only_folder">Only study starred cards</string>
    <string name="button_reload_cards">Reload</string>
    <string name="button_set_import">Import</string>
    <string name="button_csv_import">Import CSV file</string>
    <string name="button_csv_append">Add cards from CSV</string>
    <string name="button_csv_export">Export set as CSV</string>
    <string name="button_db_restore">Restore</string>

    <!-- Image descriptions -->
    <string name="description_star">Star</string>

    <!-- Error messages -->
    <string name="error_title_taken">Title is already taken</string>
    <string name="error_empty_title">Please enter a title</string>
    <string name="error_empty_term">Term cannot be blank</string>
    <string name="error_empty_definition">Definition cannot be blank</string>
    <string name="error_term_taken">Term already exists</string>

    <!-- Dialogs -->
    <plurals name="dialog_delete_set">
        <item quantity="one">Delete set</item>
        <item quantity="other">Delete sets</item>
    </plurals>
    <plurals name="dialog_delete_card">
        <item quantity="one">Delete card</item>
        <item quantity="other">Delete cards</item>
    </plurals>
    <plurals name="dialog_delete_folder">
        <item quantity="one">Delete folder</item>
        <item quantity="other">Delete folders</item>
    </plurals>
    <plurals name="dialog_set_cannot_undo">
        <item quantity="one">This will also delete it from the folders and cannot be undone</item>
        <item quantity="other">This will also delete them from the folders and cannot be undone</item>
    </plurals>
    <plurals name="dialog_folder_cannot_undo">
        <item quantity="one">This will not delete its sets permanently</item>
        <item quantity="other">This will not delete their sets permanently</item>
    </plurals>
    <string name="dialog_card_cannot_undo">This cannot be undone</string>
    <plurals name="dialog_remove_set">
        <item quantity="one">Remove set from folder</item>
        <item quantity="other">Remove sets from folder</item>
    </plurals>
    <plurals name="dialog_remove_undo">
        <item quantity="one">This will not delete it permanently</item>
        <item quantity="other">This will not delete them permanently</item>
    </plurals>
    <string name="dialog_restore_db_title">Restore database</string>
    <string name="dialog_restore_db_message">This operation will permanently delete any existing flashcards and cannot be undone</string>

    <!-- Preferences -->
    <string name="pref_header_sorting">Sorting</string>
    <string name="pref_header_studying">Studying</string>
    <string name="pref_header_creating">Creating</string>
    <string name="pref_header_backup">Backup and restore</string>
    <string-array name="pref_sorting_choices">
        <item>Alphabetical (default)</item>
        <item>Reverse alphabetical</item>
        <item>No order</item>
    </string-array>
    <string-array name="pref_sorting_choices_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_sort_sets">Sets and folders</string>
    <string name="pref_title_sort_cards">Cards</string>
    <string name="pref_title_shuffle">Shuffle</string>
    <string name="pref_title_flip">Definitions first</string>
    <string name="pref_title_share_star">Share starred only setting</string>
    <string name="pref_title_creating_star">Create starred cards</string>
    <string name="pref_title_horizontal">Scroll horizontally in study mode</string>
    <string name="pref_title_separator">CSV separator</string>
    <string name="pref_title_backup">Backup flashcards</string>
    <string name="pref_title_restore">Restore flashcards</string>
    <string name="pref_description_shuffle">Study cards in random order</string>
    <string name="pref_description_flip">Show the back side of the cards first</string>
    <string name="pref_description_star_on">Use the same value for all items</string>
    <string name="pref_description_star_off">Use a separate value for each item</string>
    <string name="pref_description_creating_star_on">Automatically star new cards</string>
    <string name="pref_description_creating_star_off">Do not star new cards automatically</string>
    <string name="pref_description_separator">Use a value other than a comma as the separator</string>
</resources>
