<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">

        <item
            android:id="@+id/item_shuffle"
            android:title="@string/pref_title_shuffle" />

        <item
            android:id="@+id/item_definition_first"
            android:title="@string/pref_title_flip" />
    </group>

    <item
        android:id="@+id/item_study_set"
        android:icon="@drawable/ic_menu_card"
        android:title="@string/button_set_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_csv_import"
        android:orderInCategory="99"
        android:title="@string/button_csv_append"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
</menu>
