<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        tools:context=".activities.ManageCardActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_manage_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_manage_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_term"
                android:inputType="textCapSentences|textMultiLine"
                android:isScrollContainer="true"
                android:theme="@style/AppTheme.Base" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_manage_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_manage_term"
            android:theme="@style/AppTheme.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_manage_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_definition"
                android:inputType="textCapSentences|textMultiLine"
                android:isScrollContainer="true"
                android:theme="@style/AppTheme.Base" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_manage_definition"
            android:layout_alignParentEnd="true"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button_manage_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="manageCard"
                android:text="@string/button_next_card"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_manage_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="manageCard"
                android:text="@string/button_done"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>